# quant-ohlcv-feature

./: .gitignore  AGENTS.md  README.md  indicator_config.py  pyproject.toml  requirements.txt
composite_feature/: Adx+mtm.py  Adx-mtm.py  Cbr_v1.py  CoppAtrBull.py  Cvr_v0.py  Damaov10.py  Fbnq_pct_v5.py  FearGreed_Yidai_v1.py  Msbt.py  Mtam.py  PriceVolumeResist.py
impl_pandas/: helpers.py
impl_polars/: helpers.py
liquidity_feature/: Amihud.py  Liquidity_v3.py  MarketPl.py  MarketPl_v2.py
momentum_feature/: AbsChg.py  Adtm.py  Adtm_v2.py  Adtm_v3.py  Ar.py  ArbrAr.py  ArbrBr.py  Autocorrelation.py  Ax10.py  Bias.py  Bias36.py  Bias36ma.py  BiasCubic_v2.py  BiasVol.py  Bias_v11.py  Bias_v13.py  Bias_v14.py  Bias_v2.py  Bias_v3.py  Bias_v4.py  Bir.py  Bop.py  Br.py  Burr.py  Cci.py  CciMagic.py  Cci_v2.py  Cci_v3.py  Cmo.py  Cmo_v2.py  Cmo_v3.py  Copp.py  CoppMinRoute.py  Copp_v3.py  Cr.py  Cs_mtm_v2.py  Dbcd.py  Dbcd_taker.py  Dbcd_v2.py  Dbcd_v3.py  (+81 more)
price_feature/: AvgPrice.py  AvgPriceToHigh.py  AvgPriceToLow.py  LowPrice.py  Typ.py  Vwap.py  VwapSignal.py  Vwapbias.py  Wc.py
tests/: compare.py  config.py  download_data.py  run_suite.py  run_suite_parallel.py
trend_feature/: Acs.py  Adx.py  AdxDi+.py  AdxDi-.py  Adxr.py  Adxrneg.py  Adxrpos.py  Angle.py  Arron.py  Bbi.py  BbiBias.py  Cse.py  Dema.py  DiffEma.py  Dma.py  Expma.py  Gap.py  Hlma.py  Hma.py  HmaSignal.py  Hullma.py  HullmaSignal.py  Ic.py  Ic_v2.py  Ic_v3.py  Ic_v4.py  Kama.py  Lma.py  Ma.py  MaSignal.py  Mac.py  Mac_v2.py  Mac_v3.py  Mac_v4.py  Mac_v5.py  MadisPlaced.py  Mak.py  Mm.py  Mreg.py  (+28 more)
(+772 files in other folders)
