[project]
name = "quant-ohlcv-features"
version = "0.1.0"
description = "A modular library of 335+ technical indicator implementations for quantitative feature engineering on OHLCV data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "pandas>=3.0.0",
    "ta-lib>=0.6.8",
    "scikit-learn>=1.8.0",
    "numba>=0.65.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "yfinance>=1.3.0"]

[tool.ruff]
line-length = 120
target-version = "py314"

extend-exclude = [".venv", "tests/data", "tests/results"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
